refactor(agent): 增强用户中断检测，清理无效代码，升级Collection API
- AbstractStreamProcessor.checkUserStopEvent() 增加线程中断检测
- 移除 ExecuteResponseStreamProcessor 空 handleCustomEvent 覆写
- 使用 getFirst()/getLast() 替代 get(0)/get(size()-1)