@@ -131,7 +131,7 @@ public class PlanResponseBlockingProcessor extends AbstractBlockingProcessor {
             taskPlan.setStatus(TaskPlanStatus.EXECUTING.getValue());
             List<AgentTaskStep> planSteps = taskPlan.getSteps();
             if (planSteps != null && !planSteps.isEmpty()) {
-                planSteps.get(0).setStatus(StepStatus.PROCESSING.getValue());
+                planSteps.getFirst().setStatus(StepStatus.PROCESSING.getValue());
             }
 
             // 推送更新后的 plan 给前端，使前端立即显示"执行中 / processing"状态
